; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_uri_local_copy_disk_filter_match.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-data.c_cache_uri_local_copy_disk_filter_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_local_copy = type { i32, i32*, i32 }
%struct.TYPE_3__ = type { i32, i32*, i32, i32 }

@CACHE_LOCAL_COPY_FLAG_INT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cache_local_copy*, %struct.TYPE_3__*)* @cache_uri_local_copy_disk_filter_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cache_uri_local_copy_disk_filter_match(%struct.cache_local_copy* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cache_local_copy*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  store %struct.cache_local_copy* %0, %struct.cache_local_copy** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %6 = load %struct.cache_local_copy*, %struct.cache_local_copy** %4, align 8
  %7 = getelementptr inbounds %struct.cache_local_copy, %struct.cache_local_copy* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @CACHE_LOCAL_COPY_FLAG_INT, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %2
  %13 = load %struct.cache_local_copy*, %struct.cache_local_copy** %4, align 8
  %14 = getelementptr inbounds %struct.cache_local_copy, %struct.cache_local_copy* %13, i32 0, i32 2
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 3
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @memcmp(i32* %14, i32* %16, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %12
  store i32 1, i32* %3, align 4
  br label %39

23:                                               ; preds = %12
  br label %38

24:                                               ; preds = %2
  %25 = load %struct.cache_local_copy*, %struct.cache_local_copy** %4, align 8
  %26 = getelementptr inbounds %struct.cache_local_copy, %struct.cache_local_copy* %25, i32 0, i32 1
  %27 = load i32*, i32** %26, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @memcmp(i32* %27, i32* %30, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %24
  store i32 1, i32* %3, align 4
  br label %39

37:                                               ; preds = %24
  br label %38

38:                                               ; preds = %37, %23
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %38, %36, %22
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @memcmp(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
